--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -1,7 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Bitcount+Prop+Single:wght@100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bitcount+Prop+Single:wght@100..900&family=Dancing+Script:wght@400..700&display=swap');
 
 body{
     font-family: "Bitcount Prop Single", system-ui !important;
+}
+
+.quote-section{
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+#quote{
+    font-family: "Dancing Script", cursive;
 }
 
 .shadow-warning-b{
